# 40Agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.py
scripts/: start-vm.sh
src/: __init__.py  config.py
src/agent/: __init__.py  core.py  omni_client.py
src/server/: __init__.py  app.py
src/stream/: __init__.py  avatar.py  processor.py
src/tools/: __init__.py  avatar_tools.py  base.py  executor.py  vm_tools.py
src/vm/: __init__.py  capture.py  controller.py
web/: app.js  index.html  style.css
